# sufc_stats

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ludwig/: README.yaml  config.yaml  player_data.csv  player_data.meta.json  player_data.split.csv  player_data.test.hdf5  player_data.training.hdf5  player_data.validation.hdf5  predict.csv
notebooks/: Fantasy Squads.ipynb  SUFC Attack.ipynb  SUFC Summary.ipynb  matchday.ipynb  misc.ipynb
prem_fl/: __init__.py  api.py
wyscout/: api.py  competitions.py  events.py  generate_data_files.py  league_table.py  match.py  stats.py  team.py
wyscout/api/: __init__.py  api.py  file_cache.py  mongo_cache.py
wyscout/viz/: arrow.py  consts.py  data.py  heat_map.py  key_passes.py  match.py  player.py  shots.py  utils.py  viz.py  xg.py
