[project]
name = "sufc-stats"
version = "0.1.0"
description = "SUFC stats visualisations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "mplsoccer>=1.4.0",
    "numpy>=2.2.4",
    "pymongo>=4.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]
